@@ -75,6 +75,22 @@
 		<td><input type="text" id="LightHistoryDays" name="LightHistoryDays" style="width: 50px; padding: .2em;" class="text ui-widget-content ui-corner-all" /></td>
 	</tr>
 	</table>
+	<br>
+	<h2>Short Log History:</h2><br>
+	<table class="display" id="shortlogtable" border="0" cellpadding="0" cellspacing="0">
+	<tr>
+		<td align="right" style="width:60px"><label>Days: </label></td>
+		<td><select id="comboshortlogdays" name="ShortLogDays" style="width:60px" class="combobox ui-corner-all">
+			<option value="1">1</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+			<option value="4">4</option>
+			<option value="5">5</option>
+			<option value="6">6</option>
+			<option value="7">7</option>
+		</select></td>
+	</tr>
+	</table>
 	</div>
 	<div class="6u">
 	<h2>Dashboard:</h2><br>
@@ -250,6 +266,9 @@ function ShowSettings()
       }
       if (typeof data.LightHistoryDays != 'undefined') {
         $("#lightlogtable #LightHistoryDays").val(data.LightHistoryDays);
+      }
+      if (typeof data.ShortLogDays != 'undefined') {
+        $("#shortlogtable #comboshortlogdays").val(data.ShortLogDays);
       }
       if (typeof data.DashboardType != 'undefined') {
         $("#dashmodetable #combosdashtype").val(data.DashboardType);
